--- a/index.html
+++ b/index.html
@@ -408,9 +408,76 @@
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
         </button>
+        <p class="title-form"> Leave a review about... </p>
+        <form class="form-mod">
+          <div class="modal-form-div">
+            <label class="modal-form-label" for="user-name">Name</label>
+            <div class="form-input-box">
+              <input class="box-input" type="text" name="user-name" id="user-name" />
+              <svg class="box-input-svg" width="18" height="18">
+                <use href="./images/icons.svg#icon-person-first"></use>
+              </svg>
+            </div>
+          </div>
+
+          <div class="modal-form-div">
+            <label class="modal-form-label" for="user-name">Phone</label>
+            <div class="form-input-box">
+              <input class="box-input" type="text" name="user-name" id="user-tel" />
+              <svg class="box-input-svg" width="18" height="18">
+                <use href="./images/icons.svg#icon-phone-black"></use>
+              </svg>
+            </div>
+          </div>
+
+          <div class="modal-form-div">
+            <label class="modal-form-label" for="user-name">Email</label>
+            <div class="form-input-box">
+              <input class="box-input" type="text" name="user-name" id="user-email" />
+              <svg class="box-input-svg" width="18" height="18">
+                <use href="./images/icons.svg#icon-email-black"></use>
+              </svg>
+            </div>
+          </div>
+
+          <div class="modal-form-div">
+            <label for="textarea" class="modal-form-label"></label>
+            <div class="form-input-box">
+              <textarea
+                class="form-textarea"
+                name="user-textarea"
+                id="user-textarea"
+                placeholder="Enter text"
+                cols="30"
+                rows="10"
+              ></textarea>
+            </div>
+          </div>
+
+          <div class="modal-form-checkbox">
+            <input
+              class="modal-form-checkbox visually-hidden"
+              type="checkbox"
+              name="user-check"
+              id="user-check"
+            />
+            <span class="modal-form-span">
+              <svg width="16" height="16" class="modal-form-svg">
+                <!-- встав квадрат -->
+                <use href="./images/icons.svg"></use>
+              </svg>
+            </span>
+            <label class="modal-form-label-checkbox" for=""
+              >I accept the terms and conditions of the
+              <a class="modal-form-link" href="">Privacy Policy</a></label
+            >
+          </div>
+
+          <!--зроби кнопку-->
+          <button></button>
+        </form>
       </div>
     </div>
-
     <script src="./js/modal.js"></script>
   </body>
 </html>
