--- a/portfolio.html
+++ b/portfolio.html
@@ -90,7 +90,7 @@
           </ul>
           <ul class="list ul-port">
             <li class="list-images">
-              <a class="link port-cards-links">
+              <a class="link port-cards-links" href="">
                 <div class="overlay">
                   <img class="img-port" src="./images/port1.jpg" alt="Banking App" width="360" />
                   <p class="overlay-par"
@@ -105,7 +105,7 @@
               </a>
             </li>
             <li class="list-images">
-              <a class="link port-cards-links"
+              <a class="link port-cards-links" href=""
                 ><div class="overlay">
                   <img
                     class="img-port"
@@ -124,7 +124,7 @@
               </a>
             </li>
             <li class="list-images">
-              <a class="link port-cards-links"
+              <a class="link port-cards-links" href=""
                 ><div class="overlay">
                   <img class="img-port" src="./images/port3.jpg" alt="Meditation App" width="360" />
                   <p class="overlay-par"
@@ -139,7 +139,7 @@
               </a>
             </li>
             <li class="list-images">
-              <a class="link port-cards-links">
+              <a class="link port-cards-links" href="">
                 <div class="overlay">
                   <img class="img-port" src="./images/port4.jpg" alt="Taxi Service" width="360" />
                   <p class="overlay-par"
@@ -154,7 +154,7 @@
               </a>
             </li>
             <li class="list-images">
-              <a class="link port-cards-links"
+              <a class="link port-cards-links" href=""
                 ><div class="overlay">
                   <img
                     class="img-port"
@@ -174,7 +174,7 @@
               </a>
             </li>
             <li class="list-images">
-              <a class="link port-cards-links"
+              <a class="link port-cards-links" href=""
                 ><div class="overlay">
                   <img class="img-port" src="./images/port6.jpg" alt="Online Courses" width="360" />
                   <p class="overlay-par"
@@ -189,7 +189,7 @@
               </a>
             </li>
             <li class="list-images">
-              <a class="link port-cards-links"
+              <a class="link port-cards-links" href=""
                 ><div class="overlay">
                   <img
                     class="img-port"
@@ -209,7 +209,7 @@
               </a>
             </li>
             <li class="list-images">
-              <a class="link port-cards-links"
+              <a class="link port-cards-links" href=""
                 ><div class="overlay">
                   <img class="img-port" src="./images/port8.jpg" alt="Organic Food" width="360" />
                   <p class="overlay-par"
@@ -224,7 +224,7 @@
               </a>
             </li>
             <li class="list-images">
-              <a class="link port-cards-links"
+              <a class="link port-cards-links" href=""
                 ><div class="overlay">
                   <img class="img-port" src="./images/port9.jpg" alt="Fresh Coffee" width="360" />
                   <p class="overlay-par"
