--- a/portfolio.html
+++ b/portfolio.html
@@ -285,6 +285,20 @@
             </li>
           </ul>
         </div>
+        <div>
+          <form class="form-footer">
+            <p class="form-par">Subscribe</p>
+            <div class="input-btn-footer">
+              <input class="input-foot" type="email" name="email" placeholder="E-mail" required />
+              <button type="submit" class="button-footer"
+                ><span class="text-footer-form"
+                  >Subscribe
+                  <svg class="svg-footer-button" width="16" height="16">
+                    <use href="./images/icons.svg#icon-footer-button"></use></svg></span
+              ></button>
+            </div>
+          </form>
+        </div>
       </div>
     </footer>
   </body>
