--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
           </div>
 
           <div class="modal-form-div">
-            <label for="textarea" class="modal-form-label"></label>
+            <label class="modal-form-label"></label>
             <div class="form-input-box">
               <textarea
                 class="form-textarea"
@@ -480,7 +480,7 @@
                 <use href="./images/icons.svg#icon-checked-click"></use>
               </svg>
             </span>
-            <label class="modal-form-label-checkbox" for=""
+            <label class="modal-form-label-checkbox" for="user-name"
               >I accept the terms and conditions of the
               <a class="modal-form-link" href="">Privacy Policy</a></label
             >
