--- a/portfolio.html
+++ b/portfolio.html
@@ -285,18 +285,18 @@
             </li>
           </ul>
         </div>
-        <div>
+        <div class="div-form-footer">
+          <p class="form-par">Subscribe</p>
           <form class="form-footer">
-            <p class="form-par">Subscribe</p>
-            <div class="input-btn-footer">
+            <label for="" class="label-box">
               <input class="input-foot" type="email" name="email" placeholder="E-mail" required />
               <button type="submit" class="button-footer"
                 ><span class="text-footer-form"
                   >Subscribe
-                  <svg class="svg-footer-button" width="16" height="16">
+                  <svg class="svg-footer-button" width="24" height="24">
                     <use href="./images/icons.svg#icon-footer-button"></use></svg></span
               ></button>
-            </div>
+            </label>
           </form>
         </div>
       </div>
