--- a/portfolio.html
+++ b/portfolio.html
@@ -288,15 +288,22 @@
         <div class="div-form-footer">
           <p class="form-par">Subscribe</p>
           <form class="form-footer">
-            <label for="" class="label-box">
-              <input class="input-foot" type="email" name="email" placeholder="E-mail" required />
-              <button type="submit" class="button-footer"
-                ><span class="text-footer-form"
-                  >Subscribe
-                  <svg class="svg-footer-button" width="24" height="24">
-                    <use href="./images/icons.svg#icon-footer-button"></use></svg></span
-              ></button>
+            <label for="user_email" class="label-box">
+              <input
+                class="input-foot"
+                type="email"
+                name="email"
+                placeholder="E-mail"
+                id="user_email"
+                required
+              />
             </label>
+            <button type="submit" class="button-footer"
+              ><span class="text-footer-form"
+                >Subscribe
+                <svg class="svg-footer-button" width="24" height="24">
+                  <use href="./images/icons.svg#icon-footer-button"></use></svg></span
+            ></button>
           </form>
         </div>
       </div>
