--- a/index.html
+++ b/index.html
@@ -412,11 +412,11 @@
               />
             </label>
             <button type="submit" class="button-footer"
-              ><span class="text-footer-form"
-                >Subscribe
-                <svg class="svg-footer-button" width="24" height="24">
-                  <use href="./images/icons.svg#icon-footer-button"></use></svg></span
-            ></button>
+              ><span class="text-footer-form">Subscribe </span
+              ><svg class="svg-footer-button" width="24" height="24">
+                <use href="./images/icons.svg#icon-footer-button"></use>
+              </svg>
+            </button>
           </form>
         </div>
       </div>
