--- a/index.html
+++ b/index.html
@@ -412,10 +412,10 @@
               />
             </label>
             <button type="submit" class="button-footer"
-              ><span class="text-footer-form">Subscribe </span
               ><svg class="svg-footer-button" width="24" height="24">
                 <use href="./images/icons.svg#icon-footer-button"></use>
               </svg>
+              <span class="text-footer-form">Subscribe</span>
             </button>
           </form>
         </div>
@@ -435,7 +435,7 @@
             <label class="modal-form-label" for="user-name">Name</label>
             <div class="form-input-box">
               <input class="box-input" type="text" name="user-name" id="user-name" />
-              <svg class="box-input-svg" width="18" height="18">
+              <svg class="box-input-svg" width="18" height="24">
                 <use href="./images/icons.svg#icon-person-first"></use>
               </svg>
             </div>
@@ -445,7 +445,7 @@
             <label class="modal-form-label" for="user-name">Phone</label>
             <div class="form-input-box">
               <input class="box-input" type="text" name="user-name" id="user-tel" />
-              <svg class="box-input-svg" width="18" height="18">
+              <svg class="box-input-svg" width="18" height="24">
                 <use href="./images/icons.svg#icon-phone-black"></use>
               </svg>
             </div>
@@ -455,42 +455,41 @@
             <label class="modal-form-label" for="user-name">Email</label>
             <div class="form-input-box">
               <input class="box-input" type="text" name="user-name" id="user-email" />
-              <svg class="box-input-svg" width="18" height="18">
+              <svg class="box-input-svg" width="18" height="24">
                 <use href="./images/icons.svg#icon-email-black"></use>
               </svg>
             </div>
           </div>
 
           <div class="modal-form-div">
-            <label class="modal-form-label"></label>
-            <div class="form-input-box">
-              <textarea
-                class="form-textarea"
-                name="user-textarea"
-                id="user-textarea"
-                placeholder="Enter text"
-                cols="30"
-                rows="10"
-              ></textarea>
-            </div>
+            <label for="user-comment" class="modal-form-label">Comment</label>
+
+            <textarea
+              class="form-textarea"
+              name="user-comment"
+              id="user-comment"
+              placeholder="Text input"
+              cols="30"
+              rows="10"
+            ></textarea>
           </div>
 
-          <div class="modal-form-checkbox">
+          <div class="modal-form-checkbox-div">
             <input
               class="modal-form-checkbox visually-hidden"
               type="checkbox"
-              name="user-check"
-              id="user-check"
+              name="user-privacy"
+              id="user-privacy"
+              value="true"
             />
-            <span class="modal-form-span">
-              <svg width="16" height="16" class="modal-form-svg">
-                <use href="./images/icons.svg#icon-checked-click"></use>
-              </svg>
-            </span>
-            <label class="modal-form-label-checkbox" for="user-name"
+            <label class="modal-form-label-checkbox" for="user-privacy"
               >I accept the terms and conditions of the
-              <a class="modal-form-link" href="">Privacy Policy</a></label
-            >
+              <a class="modal-form-link" href="">Privacy Policy</a
+              ><span class="modal-form-span">
+                <svg width="10" height="8" class="modal-form-svg">
+                  <use href="./images/icons.svg#icon-checked-click"></use>
+                </svg> </span
+            ></label>
           </div>
 
           <button type="submit" class="modal-btn-send"
