--- a/index.html
+++ b/index.html
@@ -411,11 +411,11 @@
                 required
               />
             </label>
-            <button type="submit" class="button-footer"
+            <button type="submit" class="button-footer">
+              <span class="text-footer-form">Subscribe</span
               ><svg class="svg-footer-button" width="24" height="24">
                 <use href="./images/icons.svg#icon-footer-button"></use>
               </svg>
-              <span class="text-footer-form">Subscribe</span>
             </button>
           </form>
         </div>
@@ -483,13 +483,13 @@
               value="true"
             />
             <label class="modal-form-label-checkbox" for="user-privacy"
-              >I accept the terms and conditions of the
-              <a class="modal-form-link" href="">Privacy Policy</a
               ><span class="modal-form-span">
                 <svg width="10" height="8" class="modal-form-svg">
                   <use href="./images/icons.svg#icon-checked-click"></use>
                 </svg> </span
-            ></label>
+              >I accept the terms and conditions of the
+              <a class="modal-form-link" href="">Privacy Policy</a></label
+            >
           </div>
 
           <button type="submit" class="modal-btn-send"
