--- a/portfolio.html
+++ b/portfolio.html
@@ -299,10 +299,10 @@
               />
             </label>
             <button type="submit" class="button-footer">
-              <span class="text-footer-form">Subscribe</span
-              ><svg class="svg-footer-button" width="24" height="24">
+              <svg class="svg-footer-button" width="24" height="24">
                 <use href="./images/icons.svg#icon-footer-button"></use>
               </svg>
+              <span class="text-footer-form">Subscribe</span>
             </button>
           </form>
         </div>
