--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
           </div>
 
           <div class="modal-form-div">
-            <label for="user-comment" class="modal-form-label">Comment</label>
+            <label for="user-comment" class="modal-form-label box-comment">Comment</label>
 
             <textarea
               class="form-textarea"
