--- a/index.html
+++ b/index.html
@@ -461,8 +461,8 @@
             </div>
           </div>
 
-          <div class="modal-form-div">
-            <label for="user-comment" class="modal-form-label box-comment">Comment</label>
+          <div class="box-comment">
+            <label for="user-comment" class="modal-form-label">Comment</label>
 
             <textarea
               class="form-textarea"
